fix token bags alignment, fix empty token style in token bags regression from previous commit

--- a/assembl/static/css/layout/_tokenVote.scss
+++ b/assembl/static/css/layout/_tokenVote.scss
@@ -101,7 +101,9 @@
     }
 
     .not-available:not(.animating-towards-available), .available.animating-towards-not-available, .not-available.animating-towards-available {
-      @extend .token-icon-show-like-zero-not-selected;
+      path, rect, circle {
+        @extend .token-icon-show-like-positive-not-selected;
+      }
     }
   }
 
